test+fix: restore green build (2069 tests, 0 failures) + fix calculate tool
PRODUCT FIX (Major): FunctionCallService 'calculate' tool used Nashorn/JS
ScriptEngine, removed in JDK 15+ (project runs Java 26), so it returned
'Script engine unavailable' at runtime. Replaced with a self-contained,
dependency-free recursive-descent arithmetic evaluator (+ - * / %, parens,
unary minus, decimals; no eval, no script engine, division-by-zero guarded).

TEST-DEBT remediation (no assertions weakened):
- Global: replace (Object[]) any() -> any(Object[].class) [30 sites] — the
  former silently fails to match multi-arg varargs in this Mockito version;
  fixed ~20 insert/update verifications across Calendar/Email/Notes/Contacts/
  Compare/PromptSecurity/Provider/Skills/Terminal/Mcp/PersonalAssistant/
  SessionEnhancement/ConnectorSyncScheduler.
- Vault/BackgroundJob: same varargs-matcher fix on INSERT/UPDATE verifies.
- StateController: assert real contract key 'activeUser' (frontend reads it),
  not 'user'.
- Memory: null-safe row builder (Map.of forbids null) + Arrays.asList for a
  null entry + doThrow form to avoid the when().thenThrow re-stub gotcha +
  varargs matcher on the eviction DELETE verify.
- Webhook: use a public IP literal so the SSRF validateUrl resolves without
  DNS (deterministic offline), still a non-private address.

Full suite: started at 71 red -> 0 red. Verified: mvn test BUILD SUCCESS.